WIP - Added get_started translations; renamed Best Practices to Melhores Práticas

--- a/views/pt/what_is_symfony/at_a_glance.html.twig
+++ b/views/pt/what_is_symfony/at_a_glance.html.twig
@@ -49,14 +49,14 @@
             como gerir os princípios que o guiam, efeitos colaterais, etc.
         </li>
         <li>
-            <img src="/images/en/best_practices_guaranteed.jpg" alt="Garantia das Best Practices!"
+            <img src="/images/en/best_practices_guaranteed.jpg" alt="Garantia das Melhores Práticas!"
                  class="box_article_illustration" />
             <strong>A metodologia</strong>
 
             – um “diagrama de montagem” para aplicações. Uma abordagem estruturada
             pode ser constragedora no príncipio. Mas na realidade irá permitir aos
             programadores trabalharam de modo mais eficácia e eficientemente nos
-            aspetos mais complexo de uma tarefa, e o uso das Best Practices
+            aspetos mais complexo de uma tarefa, e o uso das Melhores Práticas
             garantem a estabilidade, manutenção e atualização das aplicações
             desenvolvidas.
         </li>
@@ -77,7 +77,7 @@
         direito. Symfony foi disponibilizado para todos sob uma licença Open Source.
         Isso beneficia outros programadores, que também têm a capacidade de melhorá-lo
         adicionando os seus próprios módulos. Tudo isto foi feito num ambiente usando
-        Best Practices, standards e interoperabilidade das aplicações.
+        as Melhores Práticas, pradões e interoperabilidade das aplicações.
 
     </p>
 {% endblock %}
