Added the remaining two files; fixed some description headers; fixed some translations

--- a/views/pt/what_is_symfony.html.twig
+++ b/views/pt/what_is_symfony.html.twig
@@ -36,7 +36,7 @@
         <li><a href="{{ marketing_path('explained_to_my_boss') }}">... ao meu patrão</a></li>
         <li><a href="{{ marketing_path('explained_to_a_developer') }}">... a um programador</a></li>
         <li><a href="{{ marketing_path('explained_to_a_system_administrator') }}">... a um administrador de sistemas</a></li>
-        <li><a href="{{ marketing_path('explained_to_a_project_manager') }}">... a um gestor de projetos</a></li>
-        <li><a href="{{ marketing_path('explained_to_a_project_owner') }}">... a um chefe de projetos</a></li>
+        <li><a href="{{ marketing_path('explained_to_a_project_manager') }}">... a um gestor de projeto</a></li>
+        <li><a href="{{ marketing_path('explained_to_a_project_owner') }}">... a um proprietário de projeto</a></li>
     </ul>
 {% endblock %}
