--- a/views/pt/what_is_symfony/at_a_glance.html.twig
+++ b/views/pt/what_is_symfony/at_a_glance.html.twig
@@ -63,7 +63,7 @@
     </ul>
     <p>
         E embora possa ser óbvio, nós pensamos que é melhor dizê-lo de qualquer maneira
-         - Symfony é um framework PHP, o que significa que ele permite que as aplicações
+         - Symfony é uma framework PHP, o que significa que ele permite que as aplicações
          web sejam desenvolvidas com PHP!
     </p>
 {% endblock %}
