--- a/views/pt/what_is_symfony/elevator_pitches/explained_to_a_developer.html.twig
+++ b/views/pt/what_is_symfony/elevator_pitches/explained_to_a_developer.html.twig
@@ -1,11 +1,11 @@
-{% block title 'Symfony explicado para um Desenvolvedor' %}
+{% block title 'Symfony explicado para um Programador' %}
 {% block keywords '' %}
 {% block description '' %}
 
 {% block intro %}
     <p>
-        O Symfony é um framework Open Source distribuído. Claro que,
-        quando você sabe como desenvolver em PHP, você não precisa de um framework.
+        O Symfony é uma framework Open Source distribuído. Claro que,
+        quando você sabe como programador em PHP, você não precisa de uma framework.
         No entanto, é muito bom ter um!
     </p>
 {% endblock %}
