--- a/views/pt/what_is_symfony/elevator_pitches/explained_to_a_project_manager.html.twig
+++ b/views/pt/what_is_symfony/elevator_pitches/explained_to_a_project_manager.html.twig
@@ -1,4 +1,4 @@
-{% block title 'Symfony explicado para um Gerente de Projeto' %}
+{% block title 'Symfony explicado para um Gestor de Projeto' %}
 {% block keywords '' %}
 {% block description '' %}
 
@@ -23,7 +23,7 @@
     <p>
         Com o Symfony, você reutiliza componentes genéricos, que não têm qualquer
         valor para as necessidades específicas do seu negócio. O Symfony torna o
-        trabalho menos difícil para os desenvolvedores, que não têm que desenvolver ou
+        trabalho menos difícil para os programadores, que não têm que desenvolver ou
         reconstruir funcionalidades genéricas, tais como gestão de formulários, pois eles podem
         se concentrar em desafios reais da aplicação. O Symfony também possui ferramentas
         que tornam mais fácil de usar e melhoram a produtividade: a barra de ferramentas para
