--- a/views/pt/what_is_symfony/elevator_pitches/explained_to_a_project_owner.html.twig
+++ b/views/pt/what_is_symfony/elevator_pitches/explained_to_a_project_owner.html.twig
@@ -13,7 +13,7 @@
     <p>
         O proprietário do projeto ainda é responsável por determinar as
         funcionalidades e supervisionar o projeto, enquanto que, os aspectos técnicos
-        são confiados ao desenvolvedor. Quando se trata de fiscalizar o
+        são confiados ao progrmador. Quando se trata de fiscalizar o
         projeto, Symfony irá mudar significativamente a relação
         entre o proprietário do projeto eo desenvolvedor: porque funções
         "genéricas" (módulos de conexão de banco de dados, formulários, etc.) podem ser
