--- a/views/pt/what_is_symfony/in_five_minutes/when_use_a_framework.html.twig
+++ b/views/pt/what_is_symfony/in_five_minutes/when_use_a_framework.html.twig
@@ -1,22 +1,22 @@
-{% block title 'Quando devo usar um framework?' %}
+{% block title 'Quando devo usar uma framework?' %}
 {% block keywords '' %}
-{% block description '' %}
+{% block description 'Quando devo usar uma framework?' %}
 
 {% block intro %}
     <p>
         Bem... sempre que precisar, durante o desenvolvimento de uma aplicação web ou um site, é claro!
     </p>
     <p>
-        Por que você faria um pedaço personalizado de móveis se pudesse encontrar um que combina perfeitamente 
+        Por que você faria um pedaço personalizado de móveis se pudesse encontrar um que combina perfeitamente
         com a sua decoração, direto da prateleira? O mesmo é verdadeiro para aplicações de computador:
-        Antes de mergulhar na criação de um framework, um pequeno trabalho de pesquisa está preparado.
+        Antes de mergulhar na criação de uma framework, um pequeno trabalho de pesquisa está preparado.
     </p>
 {% endblock %}
 
 {% block body1 %}
     <h2 class="title_09">Necessidades gerais vs. funções específicas</h2>
     <p>
-        Além de um framework, há outras soluções que estão disponíveis para desenvolver sites
+        Além de uma framework, há outras soluções que estão disponíveis para desenvolver sites
         e aplicativos web: CMSs (Sistemas de Gerenciamento de Conteúdo) e seus módulos complementares,
         bem como, pacotes de soluções profissionais (CRM, soluções de comércio eletrônico, etc.).
         Se os seus recursos nativos atendem perfeitamente as suas necessidades imediatas e futuras, não
@@ -38,7 +38,7 @@
     </p>
     <ol>
         <li>Quais são as minhas necessidades atuais? Elas são cobertas por um pacote de soluções?</li>
-        <li>Quais as habilidades que eu preciso, se eu escolher um framework?</li>
+        <li>Quais as habilidades que eu preciso, se eu escolher uma framework?</li>
         <li>A solução desenvolvida será atualizável?</li>
     </ol>
     <p>
