--- a/views/pt/community.html.twig
+++ b/views/pt/community.html.twig
@@ -1,6 +1,6 @@
 {% block title 'Comunidade' %}
 {% block keywords 'comunidade symfony, forum symfony, symfony bloggers, comunidade' %}
-{% block description 'Entra em contacto com a a comunidade, encontra informações sobre as redes sociais dos
+{% block description 'Entra em contacto com a comunidade, encontra informações sobre as redes sociais dos
 programadores, canal de IRC, listas de discussão' %}
 
 {% block developers %}
