--- a/views/pt/community/irc.html.twig
+++ b/views/pt/community/irc.html.twig
@@ -1,6 +1,6 @@
 {% block title 'IRC' %}
 {% block keywords 'irc' %}
-{% block description 'O canl de IRC do symfony' %}
+{% block description 'O canal de IRC do symfony' %}
 
 {% block intro %}
     <p>
@@ -23,7 +23,7 @@
     </p>
     <p>
         Se você quiser entrar em contato com pessoas que usam o Symfony para procurar ajuda
-        e que falam a sua língua nativa, pode conetar-se aos seguintes canais no IRC:
+        e que falam a sua língua nativa, pode conectar-se aos seguintes canais no IRC:
         <ul>
             <li>Português do Brasil: <a href="irc://irc.freenode.net/symfony.br">#symfony.br</a></li>
             <li>Francês: <a href="irc://irc.freenode.net/symfony-fr">#symfony-fr</a></li>
@@ -34,7 +34,7 @@
         </ul>
     </p>
     <p>
-        Referência para a secção global da <a href="{{ marketing_path('community') }}">comunidade</a>
-        do website do Symfony para encontrar mais formas de obter ajuda (listas de discussão, fórum ...).
+        Consulte a secção global da <a href="{{ marketing_path('community') }}">comunidade</a>
+        no website do Symfony para encontrar mais formas de obter ajuda (listas de discussão, fórum ...).
     </p>
 {% endblock %}
