--- a/views/pt/get_started/components.html.twig
+++ b/views/pt/get_started/components.html.twig
@@ -177,7 +177,7 @@ pear install symfony2/HttpFoundation</pre>
             </tr>
             <tr>
                 <td><strong>PropertyAccess</strong></td>
-                <td>Fornece funcionliades para ler e escrever de e para um objecto ou matriz usando uma anotação de texto simples.</td>
+                <td>Fornece funcionalidades para ler e escrever de e para um objecto ou matriz usando uma anotação de texto simples.</td>
                 <td><a href="https://github.com/symfony/Process">Código</a></td>
                 <td><a href="{{ doc_path({'section': 'components', 'page': 'property_access/index', 'version': 'current'}) }}">Documentação</a></td>
             </tr>
