--- a/views/pt/get_started/distributions.html.twig
+++ b/views/pt/get_started/distributions.html.twig
@@ -12,8 +12,8 @@
 {% block body %}
     <h2 class="title_09"><a name="what">O que é uma distribuição?</a></h2>
     <p>
-        Como as distribuições Linux, são conhecidas pela sua form fácil de
-        instalação e funcionalidade específicas (versão de servidor, versão pública,
+        Como as distribuições Linux, são conhecidas pela sua forma fácil de
+        instalação e funcionalidades específicas (versão de servidor, versão pública,
         etc.), uma distribuição do Symfony é feita de componentes do Symfony2, um
         conjunto selecionado de pacotes, uma estrutura de pastas, uma configuração base,
         e uma configuração de sistema web opcional.
@@ -32,7 +32,7 @@
     </p>
     <p>
         No entanto, em comparação com outros concorrentes, a força do Symfony e
-        inocação reside no facto de que tudo pode ser modificado:
+        inovação reside no facto de que tudo pode ser modificado:
         a distribuição é um pacote, mas que foi projetado para ser escalável, como
         se você a tivesse criado você mesmo. Você pode adicionar ou remover pacotes,
         alterar a configuração base, ou modificar a estrutura de ficheiros, etc.,
