--- a/views/pt/what_is_symfony/elevator_pitches/explained_to_a_system_administrator.html.twig
+++ b/views/pt/what_is_symfony/elevator_pitches/explained_to_a_system_administrator.html.twig
@@ -5,7 +5,7 @@
 {% block intro %}
     <p>
         Implementar uma nova solução não implica só os que a vão usar.
-        Com a framework Symfony, outras linhas de negóocio serão afetadas.
+        Com a framework Symfony, outras linhas de negócio serão afetadas.
         Isto é verdade, por exemplo, para um administrador de sistemas,
         que é responsável por alojar as aplicações da empresa.
     </p>
