--- a/views/pt/what_is_symfony/elevator_pitches/explained_to_my_boss.html.twig
+++ b/views/pt/what_is_symfony/elevator_pitches/explained_to_my_boss.html.twig
@@ -19,7 +19,7 @@
         com os recursos/funcionaldiades disponibilizadas, o que pode ser
         mais limitado do que foi inicialmente definido, ou o oposto,
         em maior número. Tirando a parte da integração no atual sistema,
-        escolher pacotes de software requer muito pouca expriência técnica.
+        escolher pacotes de software requer muito pouca experiência técnica.
     </p>
     <p>
         Um <strong>CMS</strong> e os seus modulos adicionais podem ser usados
