--- a/views/pt/what_is_symfony/in_five_minutes/six_technical_reasons.html.twig
+++ b/views/pt/what_is_symfony/in_five_minutes/six_technical_reasons.html.twig
@@ -108,5 +108,5 @@
 {% endblock %}
 
 {% block summary %}
-    <p>Você não estará errado escolhendo o Symfony! E ninguém jamais foi demitido por usar o Symfony.</p>
+    <p>Escolher o Symfony significa ter uma visão a longo prazo dos assets da aplicação. Significa, também, saber como tornar o dia-a-dia dos desenvolvedores muito mais fácil.</p>
 {% endblock %}
