--- a/views/pt/what_is_symfony/in_five_minutes/ten_criteria.html.twig
+++ b/views/pt/what_is_symfony/in_five_minutes/ten_criteria.html.twig
@@ -105,5 +105,5 @@
 {% endblock %}
 
 {% block summary %}
-    <p>Você não estará errado escolhendo o Symfony! E ninguém jamais foi demitido por usar o Symfony.</p>
+    <p>Para a escolha de uma framework não deve ser feito um exame superficial, pois é um compromisso de longo prazo. Certifique-se de fazer a escolha certa!</p>
 {% endblock %}
