--- a/views/pt/what_is_symfony/at_a_glance.html.twig
+++ b/views/pt/what_is_symfony/at_a_glance.html.twig
@@ -52,17 +52,16 @@
             <img src="/images/en/best_practices_guaranteed.jpg" alt="Garantia das Melhores Práticas!"
                  class="box_article_illustration" />
             <strong>A metodologia</strong>
-
             – um “diagrama de montagem” para aplicações. Uma abordagem estruturada
-            pode ser constragedora no príncipio. Mas na realidade irá permitir aos
+            pode parecer restritiva no início. Mas na realidade irá permitir aos
             programadores trabalharam de modo mais eficácia e eficientemente nos
-            aspetos mais complexo de uma tarefa, e o uso das Melhores Práticas
-            garantem a estabilidade, manutenção e atualização das aplicações
+            aspectos mais complexos de uma tarefa, e o uso das Melhores Práticas
+            garante a estabilidade, manutenção e atualização das aplicações
             desenvolvidas.
         </li>
     </ul>
     <p>
-        E embora possa ser óbvio, nós pensamos que é melhor dizê-lo de qualquer maneira
+        E, embora possa ser óbvio, nós pensamos que é melhor dizê-lo de qualquer maneira
          - Symfony é uma framework PHP, o que significa que ele permite que as aplicações
          web sejam desenvolvidas com PHP!
     </p>
@@ -77,7 +76,7 @@
         direito. Symfony foi disponibilizado para todos sob uma licença Open Source.
         Isso beneficia outros programadores, que também têm a capacidade de melhorá-lo
         adicionando os seus próprios módulos. Tudo isto foi feito num ambiente usando
-        as Melhores Práticas, pradões e interoperabilidade das aplicações.
+        as Melhores Práticas, pradrões e interoperabilidade das aplicações.
 
     </p>
 {% endblock %}
@@ -85,7 +84,7 @@
 {% block community %}
     <h2 class="title_09"><a name="community">A comunidade</a></h2>
     <p>
-        E por detrás do Symfony, existe as pessoas. Nós somos as pessoas do Sensio. Nós
+        E por detrás do Symfony, existem as pessoas. Nós somos as pessoas do Sensio. Nós
         criamos o Symfony para resolver os nossos próprios problemas no desenvolvimento
         web e estamos satisfeitos por promové-lo. Nós somos também uma comunidade de
         programadores, utilizadores, e contribuidores que se tem formado em volta do
@@ -96,5 +95,5 @@
 {% block conclusion %}
     <p>Symfony é uma framework PHP.</p>
     <p>Symfony é uma framework, um conjunto de ferramentas e uma metodologia de desenvolvimento.</p>
-    <p>Por de trás das ferramentas, Symfony é também uma Filosofia e uma Comunidade.</p>
+    <p>Além das ferramentas, Symfony é também uma Filosofia e uma Comunidade.</p>
 {% endblock %}
