--- a/views/pt/what_is_symfony/elevator_pitches/explained_to_a_developer.html.twig
+++ b/views/pt/what_is_symfony/elevator_pitches/explained_to_a_developer.html.twig
@@ -29,8 +29,8 @@
         reconhecido. O Symfony é suportado pela SensioLabs, uma empresa com
         mais de 13 anos de experiência em desenvolvimento web, e por uma comunidade
         internacional vibrante, que garante a sua longevidade. Um ambiente de
-        trabalho inovador e e fácil de usar graças à integração de soluções
-        criadas em outros ambientes, como a injeção de dependência(pega
+        trabalho inovador e fácil de usar graças à integração de soluções
+        criadas em outros ambientes, como a injeção de dependência (pega
         do Java) e soluções especificamente desenvolvidas tais como a barra de
         ferramentas para debug web ou o Web Profiler. Finalmente, ao adotar "de facto
         standards", o Symfony não limita você ao ambiente dele, mas
