--- a/views/pt/what_is_symfony/elevator_pitches/explained_to_a_project_manager.html.twig
+++ b/views/pt/what_is_symfony/elevator_pitches/explained_to_a_project_manager.html.twig
@@ -12,7 +12,7 @@
 {% block body1 %}
     <h2 class="title_09">Um projeto bem definido</h2>
     <p>
-        Um guia de desenvolvimento real, o framework Symfony fornece todos os membros
+        Um guia de desenvolvimento real, o framework Symfony fornece para todos os membros
         da equipe uma referência compartilhada para a consistência do projeto: será
         muito mais fácil de entender e manter a longo prazo.
     </p>
@@ -25,9 +25,9 @@
         valor para as necessidades específicas do seu negócio. O Symfony torna o
         trabalho menos difícil para os programadores, que não têm que desenvolver ou
         reconstruir funcionalidades genéricas, tais como gestão de formulários, pois eles podem
-        se concentrar em desafios reais da aplicação. O Symfony também possui ferramentas
+        se concentrar nos desafios reais da aplicação. O Symfony também possui ferramentas
         que tornam mais fácil de usar e melhoram a produtividade: a barra de ferramentas para
         debug web, suporte nativo para ambientes de desenvolvimento, páginas de erro
-        detalhadas, e suporte nativo para segurança.
+        detalhadas e suporte nativo para segurança.
     </p>
 {% endblock %}
